# reverie_engine

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  generate_msvc32.bat  generate_msvc64.bat  update_subtree.sh
apps/reverie/main/: CMakeLists.txt
engine/: .gitignore  .gitmodules  CMakeLists.txt  README.md  grand_blue.sln  setup.bat  setup_cmake.bat
engine/apps/: CMakeLists.txt
engine/apps/reverie/: CMakeLists.txt
engine/apps/reverie/libraries/: CMakeLists.txt  reverie.json
engine/cmake/: README.md  add_google_test.cmake  common_functions.cmake
engine/cmake/VersionFromGit/: MunkeiVersionFromGit.cmake
engine/docs/: code_challenge.txt  cool_names.txt  optimization_to_do.txt  pch.txt  to_do.txt  to_do_loading_files.txt
engine/docs/GL/Shaders/: nfaa.txt
engine/foundations/: CMakeLists.txt
engine/foundations/_skeleton_library/: CMakeLists.txt
engine/foundations/_skeleton_library/tests/: CMakeLists.txt
engine/foundations/enums/: CMakeLists.txt
engine/foundations/enums/tests/: CMakeLists.txt
engine/foundations/geppetto/: CMakeLists.txt
engine/foundations/geppetto/tests/: CMakeLists.txt
engine/foundations/heave/: CMakeLists.txt
engine/foundations/heave/tests/: CMakeLists.txt
engine/foundations/layline/: CMakeLists.txt
engine/foundations/ripple/: CMakeLists.txt
engine/foundations/ripple/data/: transport_config.json
engine/foundations/ripple/tests/: CMakeLists.txt
engine/foundations/scribe/: CMakeLists.txt
engine/foundations/scribe/tests/: CMakeLists.txt
engine/foundations/tempo/: CMakeLists.txt
engine/foundations/units/: CMakeLists.txt
engine/foundations/units/tests/: CMakeLists.txt
engine/grand_blue/: .qmake.stash  CMakeLists.txt  grand_blue.ini  grand_blue.pri  grand_blue.pro
engine/grand_blue/assets/scenarios/: test_audio.scn  test_basic_cluster.scn  test_canvas.scn  test_compute_geometry_shaders.scn  test_cubemap_rendering.scn  test_forward_plus.scn  test_forward_plus_many_lights.scn  test_labels.scn  test_loading.scn  test_multithreaded_loading_save.scn  test_new_loading_cubemaps.scn  test_new_loading_glyphs.scn  test_physics.scn  test_shaders.scn  test_shadow_mapping.scn  test_siren2.scn  test_siren3.scn  test_sorting_layers.scn
engine/grand_blue/assets/scripts/: char_behavior.py  many_lights.py  spin_behavior.py  test_behavior.py  test_listener.py
engine/grand_blue/assets/shaders/: basic_g_prepass.frag  effects.frag  effects.vert
engine/grand_blue/resources/scripts/: base_behavior.py  scripts.qrc  test_behavior.py  test_listener.py
engine/grand_blue/resources/shaders/: axes.vert  basic.frag  basic.vert  basic_ubo.frag  basic_ubo.vert  blur.frag  clouds.txt  cubemap.vert  debug_skeleton.vert  gui.frag  gui.vert  horizontal_blur.vert  light_culling.comp  prepass.frag  prepass.vert  prepass_deferred.frag  prepass_shadowmap.frag  prepass_shadowmap.geom  simple.frag  simple.vert  text.frag  text.vert
engine/grand_blue/resources/textures/: textures.qrc
engine/grand_blue/src/: GbMainWindow.cpp  GbMainWindow.h  main.cpp
engine/grand_blue/src/core/: GbCoreEngine.cpp  GbCoreEngine.h  GbLogger.cpp  GbLogger.h  GbManager.cpp  GbSettings.cpp
engine/grand_blue/src/view/: GbGroupBox.h
engine/reverie/: reverie.ini
engine/reverie/assets/output/: my_test.mdl  protocol_test.mdl
engine/reverie/assets/scenarios/: test_64bit.scn  test_audio.scn  test_blueprints.scn  test_boy_texture.scn  test_cubemap_full_scene.scn  test_detached_camera.scn  test_forward_plus.scn  test_forward_plus_many_lights.scn  test_forward_plus_many_lights_legit.scn  test_glyph_alignment.scn  test_glyph_parenting.scn  test_new_loading_duplicate_polygons.scn  test_player_camera.scn
engine/reverie/assets/scripts/: circle_behavior.py  many_lights.py  player_camera_behavior.py  test_behavior.py  test_listener.py
engine/reverie/assets/shaders/: basic_g.geom  basic_g_prepass.vert
engine/reverie/resources/shaders/: basic.vert  basic_cluster.vert  canvas.frag  canvas_gui.vert  hdr.frag  points.frag  prepass_deferred.vert  prepass_shadowmap.frag  prepass_shadowmap.geom  ssao_blur.frag
engine/reverie/src/: GMainWindow.h
engine/reverie/src/core/: GConstants.h  GCoreEngine.cpp  GLogger.h  GManager.cpp  GManager.h  GObject.cpp
engine/reverie/src/view/: GGroupBox.cpp  GWidgetManager.cpp  GWidgetManager.h
engine/reverie/tests/: GTestSuite.cpp  main.cpp
engine/reverie/tests/unit_tests/: GTestDagNode.cpp  (+7 more)
engine/reverie/ui/: GbMainWindow.ui
engine/tests/: run_qmake_tests.bat
engine/tests/batch/: generate_test_pri.bat  make_pro_unit_tests.bat
engine/tests/unit_tests/: unit_tests.pri  unit_tests.pro
engine/tools/kindler/: README.md  update.bat
engine/tools/scripts/: move_headers_to_include.py  replace_json_functions.py  replace_relative_include_paths.py
engine/utils/: generate_external_pri.py  generate_pri.bat  rename_files.py
engine/utils/bkp/: setup_mscv2019.bat
engine/utils/doxygen/: generate_doxygen.bat
foundations/fortress/: CMakeLists.txt
foundations/fortress/tests/: CMakeLists.txt
foundations/geppetto/: CMakeLists.txt
foundations/geppetto/tests/: CMakeLists.txt
reverie/: CMakeLists.txt
reverie/assets/scenarios/: test_animation_system.scn  test_animation_system_python.scn  test_chunks_loading.scn  test_cube_normals.scn  test_multiple_point_shadows.scn
reverie/assets/scripts/: player_move_behavior.py  spin_behavior.py
reverie/assets/shaders/: basic_g.vert  test_dist_func.py
reverie/resources/images/: images.qrc
reverie/resources/shaders/: active_clusters.comp  basic_cluster.frag  canvas_billboard.vert  debug_bg.frag  debug_skeleton.frag  luma.frag  prepass.vert  prepass_shadowmap.vert  quad.vert  ssao.frag
reverie/src/: GMainWindow.cpp  main.cpp
reverie/src/core/: GConstants.cpp  GCoreEngine.h  GLogger.cpp  GObject.h  GSettings.cpp  GSettings.h
reverie/src/view/: GGroupBox.h  GTextEdit.h
reverie/tests/: GTest.h  GTestSuite.h
reverie/tests/unit_tests/: GTestMatrix.cpp  GTestMatrix.h  GTestParallelization.h  GTestProtocol.cpp  GTestQuaternion.cpp  GTestQuaternion.h  GTestUnits.h  GTestVector.h
(+2198 files in other folders)
