######## Add subprojects

### Fortress library
add_subdirectory(fortress)

### Scribe (logging) library
add_subdirectory(scribe)

### Duke (database) library
add_subdirectory(duke)

### Enums librari
add_subdirectory(enums)

### Layline (networking) library
add_subdirectory(layline)

### Ripple (higher-level messaging) library
add_subdirectory(ripple)

### Geppetto (widget abstraction) library
add_subdirectory(geppetto)
